--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/weather"
     tools:context=".MainActivity">
 
     <EditText
@@ -56,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:padding="8dp"
-        android:textColor="#0D47A1"
+        android:textColor="#050505"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/searchButton"
         app:layout_constraintHorizontal_bias="0.476"
